<resources>
    <string name="app_name">VeganFood</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="greetings">Hey</string>
    <string name="name">Martin L.</string>
    <string name="catalogue">Catalogue</string>
    <string name="favourites">Favourites</string>
    <string name="yourCart">Your cart</string>
    <string name="exit">Sign out</string>
    <string name="cartUppercase">CART</string>
    <string name="welcomeUppercase">WELCOME</string>
</resources>