<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Menu"
    android:background="@color/menuBackground">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:layout_marginStart="45dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/avatar"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/inter_light"
                android:text="@string/greetings"
                android:textSize="31dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/name"
                android:textSize="31dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/user"
        android:layout_marginStart="50dp">

        <LinearLayout
            android:id="@+id/catalogueL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp">

            <ImageButton
                android:id="@+id/catalogue"
                android:layout_width="54dp"
                android:layout_height="49dp"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/catalogue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:text="@string/catalogue"
                android:textSize="25dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cartL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp">

            <ImageButton
                android:id="@+id/cart"
                android:layout_width="54dp"
                android:layout_height="49dp"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/cart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/yourCart"
                android:textSize="25dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp">

            <ImageButton
                android:id="@+id/favourites"
                android:layout_width="54dp"
                android:layout_height="49dp"
                android:scaleType="fitCenter"
                android:src="@drawable/favourite"
                android:background="@android:color/transparent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/favourites"
                android:textFontWeight="900"
                android:textSize="25dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="179dp"
            android:layout_height="2dp"
            android:background="@color/underLine"
            android:layout_marginTop="74dp">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/exitL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <ImageButton
                android:id="@+id/exit"
                android:layout_width="54dp"
                android:layout_height="49dp"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/logout" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/exit"
                android:textSize="25dp" />
        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>